--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -28,12 +28,34 @@ jobs:
         run: cordova platform add ios@latest
 
       - name: Build iOS App (Release)
-        run: cordova build ios --release
-
-      - name: Archive IPA
         run: |
+          set -e
+          echo "Starting Cordova iOS build..."
+          cordova build ios --release
           mkdir -p release
-          cp -R platforms/ios/build/device/*.ipa release/
+          
+          echo "Looking for generated IPA..."
+          IPA_PATH=$(find "platforms/ios/build" -type f -name "*.ipa" | head -n 1 || true)
+          
+          if [ -n "$IPA_PATH" ]; then
+            echo "IPA found: $IPA_PATH"
+            cp "$IPA_PATH" release/
+          else
+            echo "No IPA found, searching for .app directory..."
+            APP_PATH=$(find "platforms/ios/build" -type d -name "*.app" | head -n 1 || true)
+            
+            if [ -n "$APP_PATH" ]; then
+              echo ".app found: $APP_PATH"
+              mkdir Payload
+              cp -R "$APP_PATH" Payload/
+              zip -r release/app_unsigned.ipa Payload
+              rm -rf Payload
+              echo "Unsigned IPA created from .app"
+            else
+              echo "No .app found either. Build may have failed."
+              exit 1
+            fi
+          fi
         shell: bash
 
       - name: Upload artifact
